==> espressif/esp-matter/connectedhomeip/connectedhomeip/third_party/openthread/ot-efr32/third_party/silabs/gecko_sdk/hardware/kit/common/bsp/thunderboard/icm20648.c <==
#include <stdint.h>
#include <stdio.h>
#include "em_usart.h"
#include "em_gpio.h"
#include "em_cmu.h"
#include "thunderboard/util.h"
#include "thunderboard/board.h"
#include "thunderboard/icm20648.h"

uint32_t ICM20648_init(void)
{
  uint8_t data;

  /* Disable the chip to avoid misconfiguration due transients during the SPI configuration */
  BOARD_imuEnable(false);

  /* Enable and setup the SPI bus */
  ICM20648_spiInit();

  /* Enable the chip */
  BOARD_imuEnable(true);

  /* Issue reset */
  ICM20648_reset();

  /* Disable I2C interface, use SPI */
  ICM20648_registerWrite(ICM20648_REG_USER_CTRL, ICM20648_BIT_I2C_IF_DIS);

  /* Read Who am I register, should get 0x71 */
  ICM20648_registerRead(ICM20648_REG_WHO_AM_I, 1, &data);

  /* If not - return */
  if ( (data != ICM20648_DEVICE_ID) && (data != ICM20948_DEVICE_ID) ) {
    return ICM20648_ERROR_INVALID_DEVICE_ID;
  }

  /* Auto selects the best available clock source  PLL if ready, else use the Internal oscillator */
  ICM20648_registerWrite(ICM20648_REG_PWR_MGMT_1, ICM20648_BIT_CLK_PLL);

  /* PLL startup time - maybe it is too long but better be on the safe side, no spec in the datasheet */
  UTIL_delay(30);

  /* INT pin: active low, open drain, IT status read clears. It seems that latched mode does not work, the INT pin cannot be cleared if set */
  ICM20648_registerWrite(ICM20648_REG_INT_PIN_CFG, ICM20648_BIT_INT_ACTL | ICM20648_BIT_INT_OPEN);

  return ICM20648_OK;
}

void ICM20648_registerRead(uint16_t addr, int numBytes, uint8_t *data)
{
  uint8_t regAddr;
  uint8_t bank;

  regAddr = (uint8_t) (addr & 0x7F);
  bank = (uint8_t) (addr >> 7);

  ICM20648_bankSelect(bank);

  /* Enable chip select */
  ICM20648_chipSelectSet(true);

  /* Set R/W bit to 1 - read */
  USART_Tx(ICM20648_SPI_USART, (regAddr | 0x80) );
  USART_Rx(ICM20648_SPI_USART);
  /* Transmit 0's to provide clock and read the data */
  while ( numBytes-- ) {
    USART_Tx(ICM20648_SPI_USART, 0x00);
    *data++ = USART_Rx(ICM20648_SPI_USART);
  }

  /* Disable chip select */
  ICM20648_chipSelectSet(false);

  return;
}

void ICM20648_registerWrite(uint16_t addr, uint8_t data)
{
  uint8_t regAddr;
  uint8_t bank;

  regAddr = (uint8_t) (addr & 0x7F);
  bank = (uint8_t) (addr >> 7);

  ICM20648_bankSelect(bank);

  /* Enable chip select */
  ICM20648_chipSelectSet(true);

  /* clear R/W bit - write, send the address */
  USART_Tx(ICM20648_SPI_USART, (regAddr & 0x7F) );
  USART_Rx(ICM20648_SPI_USART);

  /* Send the data */
  USART_Tx(ICM20648_SPI_USART, data);
  USART_Rx(ICM20648_SPI_USART);

  /* Disable chip select */
  ICM20648_chipSelectSet(false);

  return;
}

void ICM20648_bankSelect(uint8_t bank)
{
  /* Enable chip select */
  ICM20648_chipSelectSet(true);

  /* Select the Bank Select register */
  USART_Tx(ICM20648_SPI_USART, ICM20648_REG_BANK_SEL);
  USART_Rx(ICM20648_SPI_USART);

  /* Write the desired bank address 0..3 */
  USART_Tx(ICM20648_SPI_USART, (bank << 4) );
  USART_Rx(ICM20648_SPI_USART);

  /* Disable chip select */
  ICM20648_chipSelectSet(false);

  return;
}
