==> Pike-Amornchat/UART_live_plot/Gyroscope-Gesture-Recognition/Core/Src/icm20648.c <==
#include <stdint.h>
#include <stdio.h>
#include "icm20648.h"
#include <stdbool.h>
#define pi 3.14159

uint32_t ICM20648_init(I2C_HandleTypeDef * handle)
{
  uint8_t data;

  /* Enable and setup the SPI bus */
  ICM20648_i2cInit(handle);

  /* Issue reset */
  ICM20648_reset();

  /* Disable I2C interface, use SPI */
  ICM20648_registerWrite(ICM20648_REG_USER_CTRL, ICM20648_BIT_I2C_IF_DIS);

  /* Read Who am I register, should get 0x71 */
  ICM20648_registerRead(ICM20648_REG_WHO_AM_I, 1, &data);

  /* If not - return */
  if ( (data != ICM20648_DEVICE_ID) && (data != ICM20948_DEVICE_ID) ) {
    return ICM20648_ERROR_INVALID_DEVICE_ID;
  }

  /* Auto selects the best available clock source  PLL if ready, else use the Internal oscillator */
  ICM20648_registerWrite(ICM20648_REG_PWR_MGMT_1, ICM20648_BIT_CLK_PLL);

  /* PLL startup time - maybe it is too long but better be on the safe side, no spec in the datasheet */
  HAL_Delay(30);

  /* INT pin: active low, open drain, IT status read clears. It seems that latched mode does not work, the INT pin cannot be cleared if set */
  ICM20648_registerWrite(ICM20648_REG_INT_PIN_CFG, ICM20648_BIT_INT_ACTL | ICM20648_BIT_INT_OPEN);

  return ICM20648_OK;
}

void ICM20648_registerRead(uint16_t addr, int numBytes, uint8_t *data)
{
  uint8_t regAddr;
  uint8_t bank;

  regAddr = (uint8_t) (addr & 0x7F);
  bank = (uint8_t) ((addr >> 7) << 4);

  //ICM20648_bankSelect(bank);

  HAL_I2C_Mem_Write(hi2c,208,ICM20648_REG_BANK_SEL,(uint16_t)1,&bank,1,HAL_MAX_DELAY);
  HAL_I2C_Mem_Read(hi2c,208,(uint16_t)regAddr,(uint16_t)1,data,numBytes,HAL_MAX_DELAY);

  /* Enable chip select */
  // ICM20648_chipSelectSet(true);

  /* Set R/W bit to 1 - read */
  // USART_Tx(ICM20648_SPI_USART, (regAddr | 0x80) );
  // USART_Rx(ICM20648_SPI_USART);
  /* Transmit 0's to provide clock and read the data */
  // while ( numBytes-- ) {
  //   USART_Tx(ICM20648_SPI_USART, 0x00);
  //   *data++ = USART_Rx(ICM20648_SPI_USART);
  // }

  /* Disable chip select */
  // ICM20648_chipSelectSet(false);

  return;
}

void ICM20648_registerWrite(uint16_t addr, uint8_t data)
{
  uint8_t regAddr;
  uint8_t bank;

  regAddr = (uint8_t) (addr & 0x7F);
  bank = (uint8_t) ((addr >> 7) << 4);

  //ICM20648_bankSelect(bank);

  HAL_I2C_Mem_Write(hi2c,208,ICM20648_REG_BANK_SEL,(uint16_t)1,&bank,1,HAL_MAX_DELAY);
  HAL_I2C_Mem_Write(hi2c,208,(uint16_t)regAddr,(uint16_t)1,&data,1,HAL_MAX_DELAY);

  /* Enable chip select */
  // ICM20648_chipSelectSet(true);

  /* clear R/W bit - write, send the address */
  // USART_Tx(ICM20648_SPI_USART, (regAddr & 0x7F) );
  // USART_Rx(ICM20648_SPI_USART);

  /* Send the data */
  // USART_Tx(ICM20648_SPI_USART, data);
  // USART_Rx(ICM20648_SPI_USART);

  /* Disable chip select */
  // ICM20648_chipSelectSet(false);

  return;
}

void ICM20648_bankSelect(uint8_t bank)
{
	uint8_t newbank = bank << 4;
	HAL_I2C_Mem_Write(hi2c,208,ICM20648_REG_BANK_SEL,(uint16_t)1,&newbank,1,HAL_MAX_DELAY);
  /* Enable chip select */
  // ICM20648_chipSelectSet(true);

  /* Select the Bank Select register */
  // USART_Tx(ICM20648_SPI_USART, ICM20648_REG_BANK_SEL);
  // USART_Rx(ICM20648_SPI_USART);

  /* Write the desired bank address 0..3 */
  // USART_Tx(ICM20648_SPI_USART, (bank << 4) );
  // USART_Rx(ICM20648_SPI_USART);

  /* Disable chip select */
  // ICM20648_chipSelectSet(false);

  return;
}
